--- a/functions/public/stylesheets/arts.css
+++ b/functions/public/stylesheets/arts.css
@@ -5,11 +5,43 @@
     .Arts {
         color: black;
     }
-    
+
+    .Arts__heading {
+        text-align: center;
+        padding-top: 65px;
+    }
+
+    .Arts__description {
+        text-align: center;
+        margin-top: 70px;
+    }
     .Arts__contents {
+        margin-top: 100px;
+        margin-bottom: 200px;
+    }
+
+    .Arts__contents p {
+        text-align: center;
+        margin-bottom: 35px;
+    }
+
+    .Arts__contents__item {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        margin-bottom: 35px;
     }
+
+    .Arts__contents__item img{
+        width: 100%;
+    }
+
+    .Arts__more {
+        text-align: center;
+    }
+
+
+
+
 
 }
 
