--- a/functions/views/index.ejs
+++ b/functions/views/index.ejs
@@ -8,38 +8,71 @@
         <!--　/gakugeki-25a64/us-central1/app　の部分はデプロイするときに消す必要あり -->
         <link rel="stylesheet" href="/gakugeki-25a64/us-central1/app/stylesheets/base.css">
         <link rel="stylesheet" href="/gakugeki-25a64/us-central1/app/stylesheets/arts.css">
+        <link rel="stylesheet" href="/gakugeki-25a64/us-central1/app/stylesheets/header.css">
+        <link rel="stylesheet" href="/gakugeki-25a64/us-central1/app/stylesheets/project.css">
         <script type="module" async>
-            import {lookMore} from "/gakugeki-25a64/us-central1/app/javascripts/arts.mjs"
-            lookMore()
+            import {lookMore,getNumList,defaultImage} from "/gakugeki-25a64/us-central1/app/javascripts/arts.mjs"
+            const numList = await getNumList()
+            console.log(numList)
+            lookMore(numList)
+            defaultImage(numList)
         </script>
     </head>
     <body>
-    <div class="header">
-        <div class="header-nav">
-            <ul>
-                <li>home</li>
-                <li>information</li>
-                <li>?</li>
-                <li>about us</li>
-                <li>Arts</li>
-                <li>?</li>
-                <li>?</li>
-            </ul>
+        <div class="header">
+            <div class="header-nav">
+                <ul>
+                    <li class="header-nav-logo"><img src="/gakugeki-25a64/us-central1/app/images/gakugeki_logo.svg"></li>
+                    <div class="header-nav__menu">
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">information</a></li>
+                    <li><a href="#">aaaa</a></li>
+                    <li><a href="#">about us</a></li>
+                    <li><a href="#">Arts</a></li>
+                    <li><a href="#">aaaa</a></li>
+                    <li><a href="#">aaaa</a></li>
+                    </div>
+                </ul>
+            </div>
+            <div class="header__heading">
+                <div class="header__heading__item">
+                <h2 class="header__heading__text">
+                   <p>世界最高峰SFワールド</p>
+                   <p>学生がゼロから作る</p>
+                   <p>「仮想空間ベンチャー都市」</p>
+                   <p>絶賛開発中!!!</p>
+                </h2>
+                </div>
+                <div class="header__heading__img">
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="Arts">
-        <div class="Arts__heading">
-            <p>作品を見る↓</p>
+        <div class="project">
+                <h1 class="project__heading">開発プロジェクト</h1>
+            <div  class="project__list">
+                <h2 class="project__list__meta">metaverse</h2>
+                <h2 class="project__list__web">Webサイト</h2>
+                <h2 class="project__list__enter">新感覚エンタメ</h2>
+            </div>
         </div>
-        <div class="Arts__contents" id="Arts__contents">
-            <!--　/gakugeki-25a64/us-central1/app　の部分はデプロイするときに消す必要あり -->
-            <a href="/gakugeki-25a64/us-central1/app/images/a beautiful mountain landscape.png" download="A.png">
-                <img src="/gakugeki-25a64/us-central1/app/images/a beautiful mountain landscape.png" class="Arts__imgs">
-            </a>
+        <div class="Arts">
+            <h1 class="Arts__heading">AI Arts Gallery</h1>
+            <div class="Arts__description">
+                <p class="Arts__text">現在学檄ワールドのプロトタイプとして作成した<br>
+                    「AIアートワールド」をclusterにて公開中です!<br>
+                    メタバース空間でアート鑑賞という新感覚をお楽しみいただけます。
+                </p>
+                <p class="Arts__world">ワールドへ→</p>
+            </div>
+            <div class="Arts__contents">
+                 <p>作品を見る↓</p>
+             <div class="Arts__contents__item" id="Arts__contents__item">
+                 <!--　/gakugeki-25a64/us-central1/app　の部分はデプロイするときに消す必要あり -->
+             </div>
+             <div class="Arts__more" id="Arts__more">
+                <p>もっと見る</p>
+             </div>
+            </div>
         </div>
-        <div class="Arts__more" id="Arts__more">        
-            <button>もっと見る</button>
-        </div>
-    </div>
     </body>
 </html>
