--- a/css/Arts.css
+++ b/css/Arts.css
@@ -2,27 +2,29 @@
 
 @media screen and (min-width: 769px) {
 
-    .Arts {
-        color: black;
-    }
-
     .Arts__heading {
         text-align: center;
-        padding-top: 65px;
+        margin-top: 160px;
     }
 
     .Arts__description {
         text-align: center;
         margin-top: 70px;
+        line-height: 30px;
+
     }
     .Arts__contents {
         margin-top: 100px;
         margin-bottom: 200px;
+        text-align: center;
+    }
+
+    .Arts__contents a {
+        margin-bottom: 30px;
     }
 
     .Arts__contents p {
         text-align: center;
-        margin-bottom: 35px;
     }
 
     .Arts__contents__item {
@@ -33,15 +35,21 @@
 
     .Arts__contents__item img{
         width: 100%;
+        padding: 20px;
     }
 
     .Arts__more {
         text-align: center;
     }
 
+    .Arts__description a {
+        margin-top: 30px;
+        width: 15%;
+    }
 
-
-
+    .Arts a {
+        width: 15%;
+    }
 
 }
 
