--- a/css/Header.css
+++ b/css/Header.css
@@ -4,21 +4,22 @@
 
     .header-nav {
         width: 100%;
-        height: 100px;
+        height: 80px;
         padding-right: 0px;
-        background-color: #003462;
+        position: fixed;
+        top: 0;
+        z-index: 9999;
+        background-color: #FFF;
     }
 
     .header-nav a {
         color: rgba(30, 28, 28, 0.808);
         font-weight: bold;
         text-decoration: none;
-        background-color: #003462;
-        color: #FFE8DB;
     }
 
     .header-nav a:hover {
-        color: #ffe8db47;
+        color: #4f4c4c89;
         text-decoration: underline;
     }
 
@@ -26,6 +27,14 @@
         display: inline-block;
         text-align: center;
         width: 12%;
+        position: relative;
+        z-index: 1;
+    }
+
+    .header li::after {
+        content: "";
+        position: absolute;
+        z-index: 2;
     }
     .header-nav ul {
         display: flex;
@@ -33,17 +42,22 @@
         height: 100%;
     }
     .header-nav__menu {
-        width: 100%;
-        margin-left: 100px;
+        width: 80%;
+        text-align: center;
     }
 
     .header-nav__menu li {
         margin-left: 10px;
     }
 
-    .header-nav ul .header-nav-logo {
+    .header-nav ul .header-nav-logo  {
         width: 14%;
-        padding-left: 30px;
+        height: 100%;
+    }
+
+    .header-nav-logo img {
+        height: 90%;
+        width: 80%;
     }
 
     .header-nav ul:nth-child(2) {
@@ -57,7 +71,7 @@
     ------------------- header --------------------------*/
 
     .header__heading {
-        margin-top: 75px;
+        margin-top: 150px;
         display: flex;
         padding: 33px;
     }
@@ -69,8 +83,8 @@
     .header__heading__text {
         text-align: center;
         position: relative;
-        top: 18%;
-        left: 16%;
+        top: 25%;
+        left: -3%;
     }
 
     .header__heading__text p {
@@ -102,15 +116,25 @@
         height: 450px;
     }
 
+    .header__heading a {
+        flex: 1;
+        display: inline-block;
+        width: 100%;
+    }
+
     .header__heading__img {
-        flex: 2;
-        background-image: url(a_beautiful_mountain_landscape.png);
-        background-repeat: no-repeat;
-        background-size: cover;
+        flex: 1.6;
+
     }
 
     .header__heading__img:hover {
         opacity: 0.5;
+    }
+
+    .header__heading__img a {
+        background-image: url(../img/a_beautiful_mountain_landscape.png);
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 }
 
