--- a/functions/views/Home.ejs
+++ b/functions/views/Home.ejs
@@ -28,7 +28,7 @@
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode" data-lang="en">
+  <body class="u-body u-xl-mode" data-lang="en">
     <%- include("header.ejs") %>
     <section class="u-clearfix u-container-align-center u-palette-4-base u-section-1" id="sec-3ec5">
       <div class="u-clearfix u-sheet u-sheet-1">
@@ -85,7 +85,7 @@
           <div class="u-repeater u-repeater-1">
             <div class="u-container-align-center u-container-style u-list-item u-palette-4-base u-radius-50 u-repeater-item u-shape-round u-list-item-1">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
-                <img alt="" class="u-expanded-width u-image u-image-round u-radius-50 u-image-1" data-image-width="1920" data-image-height="1280" src="/gakugeki-25a64/us-central1/app/images/VR.jpg">
+                <img alt="" class="u-expanded-width u-image u-image-round u-radius-50 u-image-1" src="/gakugeki-25a64/us-central1/app/images/VR.jpg">
                 <h4 class="u-align-center u-text u-text-3">Main Project</h4>
                 <h3 class="u-align-center u-text u-text-default u-text-4">Metaverse開発</h3>
                 <p class="u-align-center u-text u-text-5">簡単な説明<br>ああああ<br>あああああ<br>あああああ
@@ -173,7 +173,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             <div class="u-layout-row" style="">
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-30 u-size-xs-60 u-layout-cell-1" src="">
                 <div class="u-container-layout u-valign-top u-container-layout-1" src="">
-                  <img class="u-expanded-width u-image u-image-round u-radius-50 u-image-1" src="/gakugeki-25a64/us-central1/app/images/AI-art.jpeg" data-image-width="2071" data-image-height="772">
+                  <img class="u-expanded-width u-image u-image-round u-radius-50 u-image-1" src="images/AI-art.jpeg" data-image-width="2071" data-image-height="772">
                 </div>
               </div>
               <div class="u-align-left u-container-style u-layout-cell u-right-cell u-shape-rectangle u-size-30 u-size-xs-60 u-layout-cell-2">
