--- a/css/Base.css
+++ b/css/Base.css
@@ -22,6 +22,7 @@
         background-color: #FFF;
         color: #0073bc;
         text-decoration: none;
+        transition: all 0.5s ease-out;
     }
 
     a:link {
