--- a/css/Header.css
+++ b/css/Header.css
@@ -38,8 +38,8 @@
     }
     .header-nav ul {
         display: flex;
-        align-items: center;
         height: 100%;
+        align-items: center;
     }
     .header-nav__menu {
         width: 80%;
@@ -51,13 +51,13 @@
     }
 
     .header-nav ul .header-nav-logo  {
-        width: 14%;
+        width: auto;
         height: 100%;
     }
 
     .header-nav-logo img {
-        height: 90%;
-        width: 80%;
+        height: 100%;
+        width: 100%;
     }
 
     .header-nav ul:nth-child(2) {
