--- a/functions/public/stylesheets/Home.css
+++ b/functions/public/stylesheets/Home.css
@@ -20,12 +20,16 @@
 
 .u-section-1 .u-text-1 {
   font-size: 3rem;
-  width: 248px;
-  margin: 23px auto 0;
+  margin: 75px auto 0;
 }
 
 .u-section-1 .u-text-2 {
   font-size: 1.25rem;
+  margin: 34px 0 0;
+}
+
+.u-section-1 .u-text-3 {
+  font-size: 2rem;
   margin: 34px 0 0;
 }
 
@@ -45,9 +49,30 @@
   padding: 30px 60px;
 }
 
+#top-logo-1 {
+  display:none;
+}
+#top-logo-2 {
+  display:block;
+}
+
+@media (max-width: 768px) {
+  #top-logo-1 {
+    display:block;
+  }
+  #top-logo-2 {
+    display:none;
+  }
+}
+
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
     min-height: 100px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 3rem;
+    margin: 50px auto 0;
   }
 
   .u-section-1 .u-layout-wrap-1 {
@@ -75,6 +100,8 @@
   }
 
   .u-section-1 .u-text-1 {
+    font-size: 3rem;
+    margin: 23px auto 0;
     width: 222px;
   }
 
@@ -90,8 +117,14 @@
 
 @media (max-width: 991px) and (min-width: 768px) {
   .u-section-1 .u-text-1 {
-    font-size: 1.7rem;
+    font-size: 2.0rem;
+    margin: 18px auto 0;
     width: 200px;
+  }
+
+  .u-section-1 .u-text-3 {
+    font-size: 1.5rem;
+    margin: 34px 0 0;
   }
 }
 
@@ -109,7 +142,7 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-layout-cell-1 {
-    min-height: 409px;
+    min-height: 300px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -118,6 +151,8 @@
   }
 
   .u-section-1 .u-text-1 {
+    font-size: 3.0rem;
+    margin: 18px auto 0;
     width: 334px;
   }
 
@@ -137,7 +172,8 @@
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 1.5rem;
+    font-size: 3.0rem;
+    margin: 18px auto 0;
     width: 320px;
   }
 
@@ -179,7 +215,13 @@
 }
 
 .u-section-2 .u-text-2 {
-  margin: 20px auto 0;
+  font-size: 2.0rem;
+  margin: 0 auto 0;
+}
+
+.u-section-2 .u-text-3 {
+  font-size: 1.25rem;
+  margin: 0 auto 0;
 }
 
 .u-section-2 .u-layout-cell-2 {
@@ -197,6 +239,16 @@
 }
 
 @media (max-width: 1199px) {
+  .u-section-2 .u-text-2 {
+    font-size: 1.5rem;
+    margin: 0 auto 0;
+  }
+  
+  .u-section-2 .u-text-3 {
+    font-size: 1.0rem;
+    margin: 0 auto 0;
+  }
+
   .u-section-2 .u-sheet-1 {
     min-height: 271px;
   }
@@ -232,7 +284,7 @@
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 480px;
+    min-height: 420px;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -255,12 +307,18 @@
   .u-section-2 .u-sheet-1 {
     min-height: 339px;
   }
+
+  .u-section-2 .u-text-3 {
+    font-size: 0.8rem;
+    margin: 0 auto 0;
+  }
+
 } .u-section-3 {
   background-image: none;
 }
 
 .u-section-3 .u-sheet-1 {
-  min-height: 613px;
+  min-height: 500px;
 }
 
 .u-section-3 .u-text-1 {
@@ -279,7 +337,7 @@
 
 .u-section-3 .u-repeater-1 {
   grid-template-columns: calc(33.3333% - 25.3333px) calc(33.3333% - 25.3333px) calc(33.3333% - 25.3333px);
-  min-height: 450px;
+  min-height: 380px;
   grid-gap: 38px 38px;
 }
 
@@ -368,7 +426,7 @@
   }
 
   .u-section-3 .u-repeater-1 {
-    min-height: 365px;
+    min-height: 330px;
   }
 
   .u-section-3 .u-image-1 {
@@ -417,7 +475,7 @@
 @media (max-width: 991px) {
   .u-section-3 .u-repeater-1 {
     grid-template-columns: calc(50% - 19px) calc(50% - 19px);
-    min-height: 902px;
+    min-height: 775px;
   }
 
   .u-section-3 .u-image-1 {
@@ -436,6 +494,7 @@
 @media (max-width: 767px) {
   .u-section-3 .u-repeater-1 {
     grid-template-columns: 100%;
+    min-height: 1450px;
   }
 
   .u-section-3 .u-image-1 {
@@ -452,6 +511,10 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-3 .u-repeater-1 {
+    min-height: 1100px;
+  }
+
   .u-section-3 .u-image-1 {
     height: 192px;
   }
@@ -647,7 +710,12 @@
 }
 
 .u-section-5 .u-text-2 {
-  margin: 50px 21px 0;
+  margin: auto auto 0;
+}
+
+.u-section-5 .u-text-3 {
+  margin: 60px auto 0;
+  font-size: medium;
 }
 
 .u-section-5 .u-btn-1 {
@@ -659,6 +727,10 @@
 @media (max-width: 1199px) {
   .u-section-5 .u-sheet-1 {
     min-height: 348px;
+  }
+
+  .u-section-5 .u-text-3 {
+    margin: 40px auto 0;
   }
 
   .u-section-5 .u-layout-cell-1 {
@@ -678,6 +750,10 @@
 @media (max-width: 991px) {
   .u-section-5 .u-sheet-1 {
     min-height: 232px;
+  }
+
+  .u-section-5 .u-text-3 {
+    margin: 30px auto 0;
   }
 
   .u-section-5 .u-layout-cell-1 {
@@ -708,6 +784,10 @@
     min-height: 522px;
   }
 
+  .u-section-5 .u-text-3 {
+    margin: 0 auto 0;
+  }
+
   .u-section-5 .u-layout-cell-1 {
     min-height: 317px;
   }
@@ -730,6 +810,10 @@
 @media (max-width: 575px) {
   .u-section-5 .u-sheet-1 {
     min-height: 311px;
+  }
+
+  .u-section-5 .u-text-3 {
+    font-size: small;
   }
 
   .u-section-5 .u-layout-cell-1 {
