--- a/functions/views/index.ejs
+++ b/functions/views/index.ejs
@@ -28,23 +28,25 @@
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode" data-lang="en">
+  <body class="u-body u-xl-mode" data-lang="en">
     <%- include("header.ejs") %>
     <section class="u-clearfix u-container-align-center u-palette-4-base u-section-1" id="sec-3ec5">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-expanded-width u-gutter-10 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout" style="">
             <div class="u-layout-row" style="">
-              <div class="u-container-style u-layout-cell u-left-cell u-size-24 u-size-xs-60 u-layout-cell-1" src="">
+              <div class="u-align-center u-container-style u-image u-image-round u-layout-cell u-radius-50 u-right-cell u-size-30 u-size-xs-60 u-image-1" src="" data-image-width="1440" data-image-height="871" id="top-logo-1">
+                <div class="u-container-layout u-valign-middle u-container-layout-2" src=""></div>
+              </div>
+              <div class="u-container-style u-layout-cell u-left-cell u-size-30 u-size-xs-60 u-layout-cell-1" src="">
                 <div class="u-container-layout u-container-layout-1">
-                  <h2 class="u-align-center u-text u-text-1">世界最高峰<br>SFワールド
+                  <h2 class="u-align-center u-text u-text-1">〜世界最高〜
                   </h2>
-                  <p class="u-align-center u-text u-text-2">学生がゼロから作る<br>「仮想空間ベンチャー都市」<br>絶賛開発中
-                  </p>
-                  <a href="#" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-base u-radius-50 u-btn-1">開発内容➔</a>
+                  <h3 class="u-align-center u-text u-text-3">SF世界を実現する</h3>
+                  <a href="#" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-base u-radius-50 u-btn-1">ワールドへ</a>
                 </div>
               </div>
-              <div class="u-align-center u-container-style u-image u-image-round u-layout-cell u-radius-50 u-right-cell u-size-36 u-size-xs-60 u-image-1" src="" data-image-width="1440" data-image-height="871">
+              <div class="u-align-center u-container-style u-image u-image-round u-layout-cell u-radius-50 u-right-cell u-size-30 u-size-xs-60 u-image-1" src="" data-image-width="1440" data-image-height="871" id="top-logo-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-2" src=""></div>
               </div>
             </div>
@@ -57,17 +59,18 @@
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-container-align-center u-container-style u-layout-cell u-size-30 u-layout-cell-1">
+              <div class="u-container-align-center u-container-style u-layout-cell u-size-36 u-layout-cell-1">
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
                   <div class="u-container-align-center u-container-style u-expanded-width u-group u-palette-5-base u-radius-30 u-shape-round u-group-1">
                     <div class="u-container-layout u-valign-middle u-container-layout-2">
-                      <h3 class="u-align-center u-text u-text-default u-text-1">軽い紹介(about us)</h3>
-                      <h4 class="u-align-center u-text u-text-default u-text-2">紹介の本文</h4>
+                      <h4 class="u-align-center u-text u-text-default u-text-2">
+                        未来の完全メタバース<br/>開発プロジェクト</h4>
+                      <p class="u-align-center u-text u-text-default u-text-3">日本中のテクノロジー好き学生が結集し<br/>「未来の完全メタバース」を研究開発する<br/>超本気プロジェクト！</p>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="u-container-align-center u-container-style u-layout-cell u-size-30 u-layout-cell-2">
+              <div class="u-container-align-center u-container-style u-layout-cell u-size-24 u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-3">
                   <a href="https://nicepage.com/wysiwyg-html-editor" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-base u-radius-50 u-btn-1">詳しく</a>
                 </div>
@@ -85,7 +88,7 @@
           <div class="u-repeater u-repeater-1">
             <div class="u-container-align-center u-container-style u-list-item u-palette-4-base u-radius-50 u-repeater-item u-shape-round u-list-item-1">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
-                <img alt="" class="u-expanded-width u-image u-image-round u-radius-50 u-image-1" data-image-width="1920" data-image-height="1280" src="/gakugeki-25a64/us-central1/app/images/VR.jpg">
+                <img alt="" class="u-expanded-width u-image u-image-round u-radius-50 u-image-1" src="/gakugeki-25a64/us-central1/app/images/VR.jpg">
                 <h4 class="u-align-center u-text u-text-3">Main Project</h4>
                 <h3 class="u-align-center u-text u-text-default u-text-4">Metaverse開発</h3>
                 <p class="u-align-center u-text u-text-5">簡単な説明<br>ああああ<br>あああああ<br>あああああ
@@ -173,7 +176,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             <div class="u-layout-row" style="">
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-30 u-size-xs-60 u-layout-cell-1" src="">
                 <div class="u-container-layout u-valign-top u-container-layout-1" src="">
-                  <img class="u-expanded-width u-image u-image-round u-radius-50 u-image-1" src="/gakugeki-25a64/us-central1/app/images/AI-art.jpeg" data-image-width="2071" data-image-height="772">
+                  <img class="u-expanded-width u-image u-image-round u-radius-50 u-image-1" src="images/AI-art.jpeg" data-image-width="2071" data-image-height="772">
                 </div>
               </div>
               <div class="u-align-left u-container-style u-layout-cell u-right-cell u-shape-rectangle u-size-30 u-size-xs-60 u-layout-cell-2">
