--- a/functions/public/stylesheets/arts.css
+++ b/functions/public/stylesheets/arts.css
@@ -167,16 +167,11 @@
   background-image: none;
 }
 
-.u-section-2 .u-sheet-1 {
-  min-height: 858px;
-}
-
 .u-section-2 .u-text-1 {
   margin: 60px auto 0;
 }
 
 .u-section-2 .u-gallery-1 {
-  height: 552px;
   grid-gap: 17px 17px;
   margin: 38px 0 0;
 }
@@ -186,61 +181,12 @@
   grid-gap: 34px 34px;
 }
 
-.u-section-2 .u-gallery-item-1 {
+.u-section-2 .u-gallery-item {
+  height: 300px;
   margin-right: 0;
 }
 
 .u-section-2 .u-over-slide-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  transition-duration: 0.25s;
-  padding: 20px;
-}
-
-.u-section-2 .u-gallery-item-2 {
-  margin-right: 0;
-}
-
-.u-section-2 .u-over-slide-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  transition-duration: 0.25s;
-  padding: 20px;
-}
-
-.u-section-2 .u-gallery-item-3 {
-  margin-right: 0;
-}
-
-.u-section-2 .u-over-slide-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  transition-duration: 0.25s;
-  padding: 20px;
-}
-
-.u-section-2 .u-gallery-item-4 {
-  margin-right: 0;
-}
-
-.u-section-2 .u-over-slide-4 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  transition-duration: 0.25s;
-  padding: 20px;
-}
-
-.u-section-2 .u-gallery-item-5 {
-  margin-right: 0;
-}
-
-.u-section-2 .u-over-slide-5 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  transition-duration: 0.25s;
-  padding: 20px;
-}
-
-.u-section-2 .u-gallery-item-6 {
-  margin-right: 0;
-}
-
-.u-section-2 .u-over-slide-6 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
   transition-duration: 0.25s;
   padding: 20px;
@@ -257,12 +203,8 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 761px;
-  }
 
   .u-section-2 .u-gallery-1 {
-    height: 455px;
     margin-right: initial;
     margin-left: initial;
   }
@@ -273,12 +215,8 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 1105px;
-  }
 
   .u-section-2 .u-gallery-1 {
-    height: 799px;
     margin-right: initial;
     margin-left: initial;
   }
@@ -289,12 +227,8 @@
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 2741px;
-  }
 
   .u-section-2 .u-gallery-1 {
-    height: 2435px;
     margin-right: initial;
     margin-left: initial;
   }
@@ -302,15 +236,16 @@
   .u-section-2 .u-gallery-inner-1 {
     grid-template-columns: repeat(1, auto);
   }
+
+  .u-section-2 .u-gallery-item {
+    width:300px;
+    margin:auto
+  }
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 1871px;
-  }
 
   .u-section-2 .u-gallery-1 {
-    height: 1565px;
     margin-right: initial;
     margin-left: initial;
   }
