--- a/functions/views/About.ejs
+++ b/functions/views/About.ejs
@@ -117,25 +117,25 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           <div class="u-layout-col">
             <div class="u-size-30">
               <div class="u-layout-row">
-                <div class="u-container-align-center u-container-style u-layout-cell u-palette-1-dark-1 u-size-15 u-size-30-md u-layout-cell-1">
-                  <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-2"><span class="u-align-center-sm u-align-center-xs u-file-icon u-icon u-text-palette-5-light-3 u-icon-1"><img src="/gakugeki-25a64/us-central1/app/images/908304-7412114d.png" alt=""></span>
+                <div class="u-container-align-center-lg u-container-align-center-md u-container-align-center-xl u-container-style u-layout-cell u-palette-1-dark-1 u-size-15 u-size-30-md u-layout-cell-1" id="vr-box-1">
+                  <div class="u-container-layout u-valign-middle-sm u-container-layout-2"><span class="u-align-center-sm u-align-center-xs u-file-icon u-icon u-text-palette-5-light-3 u-icon-1"><img src="/gakugeki-25a64/us-central1/app/images/908304-7412114d.png" alt=""></span>
                     <p class="u-align-center-sm u-align-center-xs u-text u-text-default u-text-3">VR開発</p>
                   </div>
                 </div>
-                <div class="u-container-align-center-sm u-container-align-center-xs u-container-style u-layout-cell u-palette-1-dark-1 u-shape-rectangle u-size-15 u-size-30-md u-layout-cell-2">
+                <div class="u-container-align-center-sm u-container-align-center-xs u-container-style u-layout-cell u-palette-1-dark-1 u-shape-rectangle u-size-15 u-size-30-md u-layout-cell-2" id="vr-box-2">
                   <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-3">
-                    <p class="u-align-center u-text u-text-default u-text-4">仮想空間の開発を<br>行っています 
-                    </p>
+                    <div class="u-align-center u-text u-text-default u-text-4">仮想空間の開発を行っています 
+                    </div>
                   </div>
                 </div>
-                <div class="u-container-align-center-lg u-container-align-center-md u-container-align-center-xl u-container-style u-layout-cell u-size-15 u-size-30-md u-layout-cell-3">
+                <div class="u-container-align-center-lg u-container-align-center-md u-container-align-center-xl u-container-style u-layout-cell u-size-15 u-size-30-md u-layout-cell-3" id="pv-box-1">
                   <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-4"><span class="u-file-icon u-icon u-text-palette-5-light-3 u-icon-2"><img src="/gakugeki-25a64/us-central1/app/images/7655679-125ca3de.png" alt=""></span>
                     <p class="u-text u-text-default u-text-5">広報</p>
                   </div>
                 </div>
-                <div class="u-container-align-center-sm u-container-align-center-xs u-container-style u-layout-cell u-size-15 u-size-30-md u-layout-cell-4">
+                <div class="u-container-align-center-sm u-container-align-center-xs u-container-style u-layout-cell u-size-15 u-size-30-md u-layout-cell-4" id="pv-box-2">
                   <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-5">
-                    <p class="u-align-center u-text u-text-default u-text-6">活動を広く知ってもらえるよう発信活動をしています </p>
+                    <div class="u-align-center u-text u-text-default u-text-6">活動を広く知ってもらえるよう発信活動をしています </div>
                   </div>
                 </div>
               </div>
@@ -149,7 +149,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                 </div>
                 <div class="u-container-align-center-sm u-container-align-center-xs u-container-style u-layout-cell u-palette-1-dark-1 u-size-15 u-size-30-md u-layout-cell-6">
                   <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-7">
-                    <p class="u-align-center u-text u-text-default u-text-8">ウェブサイトの開発を行っています</p>
+                    <div class="u-align-center u-text u-text-default u-text-8">ウェブサイトの開発を行っています</div>
                   </div>
                 </div>
                 <div class="u-container-align-center-lg u-container-align-center-md u-container-align-center-xl u-container-style u-layout-cell u-palette-1-dark-2 u-size-15 u-size-30-md u-layout-cell-7">
@@ -159,7 +159,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                 </div>
                 <div class="u-container-align-center-sm u-container-align-center-xs u-container-style u-layout-cell u-palette-1-dark-2 u-size-15 u-size-30-md u-layout-cell-8">
                   <div class="u-container-layout u-valign-middle-sm u-container-layout-9">
-                    <p class="u-align-center u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-10">仮想空間ならではのエンタメを提供しています</p>
+                    <div class="u-align-center u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-10">仮想空間ならではのエンタメを提供しています</div>
                   </div>
                 </div>
               </div>
@@ -178,5 +178,5 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
       </div>
     </section>
     <%- include("footer.ejs") %>
-  
+    <script type="text/javascript" src="/gakugeki-25a64/us-central1/app/javascripts/about.js"></script>
 </body></html>
