--- a/functions/views/About.ejs
+++ b/functions/views/About.ejs
@@ -44,7 +44,7 @@
     <section class="u-align-center u-clearfix u-palette-5-base u-section-3" id="sec-d019">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h1 class="u-text u-text-default u-text-palette-2-base u-text-1">About Us</h1>
-        <h4 class="u-text u-text-2">メタバースの可能性ってもっと大きいはずだ<br>あああ<br>ああ<br>ああ<br>あ<br>ああ<br>あああああああああああああああああああああああああ
+        <h4 class="u-text u-text-2">『学檄INFINITE!!製作委員会』は、<br class="block-767"/>2022年6月に発足した学生団体である。<br/>立ち上げ初期は開発好きな大学生数人の<br class="block-767"/>小さなコミュニティだったが、<br/>2023年3月現在では学生の数は20人を超え、<br/>メタバース開発・Web開発・<br class="block-767"/>未来のエンタメ製作など<br/>多岐にわたる活動を行っている。<br/>昨年12月には、学問と遊びの融合をテーマに<br class="block-767"/>『V檄祭』を主催。<br/>仮想空間でのイベントとしては異例の<br class="block-767"/>90名を超える動員を達成し、<br/>現在、「未来のメタバースの開発」に向け、<br class="block-767"/>鋭意、取り組んでいる。
         </h4>
       </div>
     </section>
@@ -101,15 +101,10 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-palette-1-dark-2 u-section-5" id="sec-a48b">
-      <div class="u-clearfix u-sheet u-sheet-1"></div>
-    </section>
     <section class="u-clearfix u-container-align-center-lg u-container-align-center-md u-container-align-center-sm u-container-align-center-xs u-palette-1-dark-2 u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-section-6" id="sec-7f19">
       <div class="u-container-style u-group u-shape-rectangle u-group-1">
         <div class="u-container-layout u-valign-middle u-container-layout-1">
           <h1 class="u-align-center u-text u-text-default u-text-palette-2-base u-text-1">活動部署</h1>
-          <h3 class="u-align-center u-text u-text-default u-text-2">次世代のメタバースを開発するために<br>以下の部門で学生が活躍しています
-          </h3>
         </div>
       </div>
       <div class="u-clearfix u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-expanded-width-xs u-layout-wrap u-layout-wrap-1">
