--- a/functions/views/Arts.ejs
+++ b/functions/views/Arts.ejs
@@ -42,8 +42,9 @@
                 <div class="u-layout-col">
                   <div class="u-container-align-center u-container-style u-layout-cell u-size-60 u-layout-cell-1">
                     <div class="u-container-layout u-container-layout-1">
-                      <h1 class="u-align-center u-text u-text-default u-text-1">AI Arts Gallery</h1>
-                      <h4 class="u-align-center u-text u-text-default u-text-2">AIによる大作の数々を公開中！<br>気に入ったものがあれば無料でダウンロードしましょう！
+                      <h4 class="u-align-center u-text u-text-default u-text-4">ええあいいちば</h4>
+                      <h1 class="u-align-center u-text u-text-default u-text-1">絵え愛市場</h1>
+                      <h4 class="u-align-center u-text u-text-default u-text-2">日本初となる<br/>メタバース空間上でのAIアート販売展示会
                       </h4>
                     </div>
                   </div>
@@ -51,18 +52,23 @@
               </div>
               <div class="u-size-30">
                 <div class="u-layout-row">
-                  <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
+                  <div class="u-container-style u-layout-cell u-layout-cell-2 full-width-991">
                     <div class="u-container-layout u-container-layout-2">
                       <div class="u-container-style u-expanded-width u-group u-palette-1-base u-radius-30 u-shape-round u-group-1">
                         <div class="u-container-layout u-container-layout-3">
-                          <h4 class="u-align-center u-text u-text-default u-text-3">現在学檄ワールドのプロトタイプとして作成した「AIアートワールド」をclusterにて公開中です！<br>メタバース空間でアート鑑賞という新感覚をお楽しみいただけます。
-                          </h4>
+                          <h4 class="u-align-center u-text u-text-default u-text-3">
+                            展示作品をご購入される場合は、<br/>各アート番号をお控えください。<br/>
+                            最新の販売情報につきましては、<br/>Twitterにてご連絡、チェックです!!</h4>
+                          <small class="u-align-center u-text u-text-default u-text-5">PCからのご入室になります</small>
                         </div>
                       </div>
+                      <div class="u-container-layout u-container-layout-5">
                       <a href="https://nicepage.dev" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-light-1 u-radius-50 u-btn-1">ワールドへ</a>
+                      <a href="https://nicepage.dev" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-light-1 u-radius-50 u-btn-2">Twitter</a>
+                      </div>
                     </div>
                   </div>
-                  <div class="u-container-align-center u-container-style u-hidden-sm u-hidden-xs u-layout-cell u-size-30 u-layout-cell-3">
+                  <div class="u-container-align-center u-container-style u-hidden-sm u-hidden-xs u-layout-cell u-size-24 u-layout-cell-3 none-991">
                     <div class="u-container-layout u-valign-middle u-container-layout-4">
                       <img class="u-expanded-width u-image u-image-round u-radius-50 u-image-1" src="/gakugeki-25a64/us-central1/app/images/AI-art.jpeg" data-image-width="2071" data-image-height="772">
                     </div>
