--- a/functions/views/footer.ejs
+++ b/functions/views/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="u-align-center u-clearfix u-footer u-grey-90 u-footer" id="sec-8831"><div class="u-clearfix u-sheet u-sheet-1">
-    <h3 class="u-text u-text-2">学檄INFINITE製作委員会</h3>
+    <h3 class="u-text u-text-2">学檄INFINITE!!製作委員会</h3>
   </div></footer>
 <section class="u-backlink u-clearfix u-grey-80">
   <a class="u-link" href="https://nicepage.com/html-templates" target="_blank">
