--- a/functions/public/stylesheets/About.css
+++ b/functions/public/stylesheets/About.css
@@ -1,4 +1,13 @@
- .u-section-1 {
+.block-767 {
+  display: none;
+}
+@media (max-width: 767px) {
+  .block-767 {
+    display: block;
+  }
+}
+
+.u-section-1 {
   background-image: url("/gakugeki-25a64/us-central1/app/images/gakugeki-logo-v2.png");
   background-position: 50% 50%;
 }
@@ -62,7 +71,7 @@
 }
 
 .u-section-2 .u-text-1 {
-  margin: 51px 0 0;
+  margin: 40px 0 0;
 }
 
 .u-section-2 .u-icon-1 {
@@ -248,21 +257,30 @@
 }
 
 .u-section-3 .u-text-2 {
-  width: 680px;
-  font-size: 1.875rem;
+  width: 750px;
+  font-size: 1.375rem;
+  line-height: 2.0rem;
   margin: 20px auto 60px;
 }
 
 @media (max-width: 767px) {
+  .u-section-3 .u-text-1 {
+    font-weight: 700;
+    margin: 30px auto 0;
+  }
+
   .u-section-3 .u-text-2 {
     width: 540px;
     font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-3 .u-text-2 {
     width: 340px;
+    font-size: 1.05rem;
+    line-height: 1.5rem;
   }
 }.u-section-4 .u-sheet-1 {
   min-height: 660px;
@@ -270,7 +288,7 @@
 
 .u-section-4 .u-text-1 {
   font-weight: 700;
-  margin: 60px auto 0;
+  margin: 40px auto 0;
 }
 
 .u-section-4 .u-text-2 {
@@ -407,20 +425,13 @@
     padding-left: 10px;
     padding-right: 10px;
   }
-} .u-section-5 {
-  background-image: none;
 }
-
-.u-section-5 .u-sheet-1 {
-  min-height: 40px;
-} 
 .u-section-6 {
   background-image: none;
 }
 
 .u-section-6 .u-group-1 {
   width: 800px;
-  min-height: 200px;
   height: auto;
   margin: auto auto;
 }
@@ -432,7 +443,7 @@
 
 .u-section-6 .u-text-1 {
   font-weight: 700;
-  margin: 0 auto;
+  margin: 50px auto;
 }
 
 .u-section-6 .u-text-2 {
