--- a/functions/public/stylesheets/Home.css
+++ b/functions/public/stylesheets/Home.css
@@ -188,48 +188,45 @@
   min-height: 341px;
 }
 
+.u-section-2 .u-text-1 {
+  font-weight: 700;
+  margin: 40px auto 10px;
+}
+
 .u-section-2 .u-layout-wrap-1 {
-  margin: 43px 0 17px;
+  margin: 10px 0 17px;
 }
 
 .u-section-2 .u-layout-cell-1 {
-  min-height: 281px;
 }
 
 .u-section-2 .u-container-layout-1 {
-  padding: 30px;
+  padding: 10px 30px 30px 30px;
 }
 
 .u-section-2 .u-group-1 {
   min-height: 159px;
+  max-width:700px;
   margin-top: 0;
   margin-bottom: 0;
+  left:50%;
+  transform:translateX(-50%);
 }
 
 .u-section-2 .u-container-layout-2 {
-  padding: 30px;
-}
-
-.u-section-2 .u-text-1 {
-  margin: 0 auto;
+  padding: 10px 30px 10px 30px;
 }
 
 .u-section-2 .u-text-2 {
-  font-size: 2.0rem;
-  margin: 0 auto 0;
-}
-
-.u-section-2 .u-text-3 {
-  font-size: 1.25rem;
+  font-size: 1.75rem;
   margin: 0 auto 0;
 }
 
 .u-section-2 .u-layout-cell-2 {
-  min-height: 281px;
 }
 
 .u-section-2 .u-container-layout-3 {
-  padding: 30px;
+  padding: 10px 30px 30px 30px;
 }
 
 .u-section-2 .u-btn-1 {
@@ -243,11 +240,6 @@
     font-size: 1.5rem;
     margin: 0 auto 0;
   }
-  
-  .u-section-2 .u-text-3 {
-    font-size: 1.0rem;
-    margin: 0 auto 0;
-  }
 
   .u-section-2 .u-sheet-1 {
     min-height: 271px;
@@ -257,14 +249,6 @@
     position: relative;
     margin-right: initial;
     margin-left: initial;
-  }
-
-  .u-section-2 .u-layout-cell-1 {
-    min-height: 232px;
-  }
-
-  .u-section-2 .u-layout-cell-2 {
-    min-height: 232px;
   }
 }
 
@@ -304,16 +288,166 @@
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 339px;
-  }
-
-  .u-section-2 .u-text-3 {
-    font-size: 0.8rem;
+  .u-section-2 .u-text-2 {
+    font-size: 1.0rem;
     margin: 0 auto 0;
   }
 
-} .u-section-3 {
+  .u-section-2 .u-sheet-1 {
+    min-height: 200px;
+  }
+
+  .u-section-2 .u-group-1 {
+    min-height: 100px;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .u-section-2 .u-btn-1 {
+    background-image: none;
+    margin: 0 auto;
+    padding: 10px 80px;
+    font-size: 0.8rem;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 0;
+  }
+
+  .u-section-2 .u-container-layout-3 {
+    padding-top: 0;
+  }
+
+} 
+
+.u-section-7 {
+  background-image: none;
+}
+
+.u-section-7 .u-sheet-1 {
+  min-height: 541px;
+}
+
+.u-section-7 .u-layout-wrap-1 {
+  margin: 60px auto 60px 0;
+}
+
+.u-section-7 .u-layout-cell-1 {
+  min-height: 300px;
+  width: 50%;
+}
+
+.u-section-7 .u-container-layout-1 {
+  padding: 30px 60px;
+}
+
+.u-section-7 .u-text-3 {
+  font-size: 2.5rem;
+  margin: 100px 0 0;
+}
+
+.u-section-7 .u-btn-1 {
+  background-image: none;
+  margin: 37px auto 0;
+  padding: 10px 72px 10px 72px;
+}
+.u-section-7 .u-image-1 {
+  width: 450px;
+  height: 450px;
+  margin: auto;
+  background-image: url("/gakugeki-25a64/us-central1/app/images/nikoniko2023-image.png");
+  background-position: 50% 50%;
+}
+
+@media (max-width: 1199px) {
+  .u-section-7 .u-sheet-1 {
+    min-height: 100px;
+  }
+
+  .u-section-7 .u-layout-wrap-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+  .u-section-7 .u-text-3 {
+    margin: 70px 0 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-7 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-7 .u-container-layout-1 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .u-section-7 .u-text-3 {
+    font-size: 2.0rem;
+    margin: 50px 0 0;
+  }
+
+  .u-section-7 .u-image-1 {
+    height: 350px;
+    width: 350px;
+  }
+  .u-section-7 .u-btn-1 {
+    padding: 10px 40px 10px 40px;
+  }
+
+  .u-section-7 .u-container-layout-2 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-7 .u-layout-cell-1 {
+    min-height: 200px;
+  }
+
+  .u-section-7 .u-text-3 {
+    font-size: 2.0rem;
+    margin: 0 0 0;
+  }
+
+  .u-section-7 .u-layout-cell-1 {
+    width: 100%;
+  }
+
+  .u-section-7 .u-image-1 {
+  }
+  .u-section-7 .u-btn-1 {
+    padding: 10px 40px 10px 40px;
+    margin-bottom: 30px;
+  }
+
+  .u-section-7 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-7 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-7 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-7 .u-image-1 {
+    min-height: 257px;
+  }
+}
+
+.u-section-3 {
   background-image: none;
 }
 
@@ -679,7 +813,7 @@
 
 .u-section-5 .u-text-1 {
   font-weight: 700;
-  margin: 35px auto 0;
+  margin: 0 auto 0;
 }
 
 .u-section-5 .u-layout-wrap-1 {
@@ -706,16 +840,16 @@
 }
 
 .u-section-5 .u-container-layout-2 {
-  padding: 30px 60px;
+  padding: 30px 0;
 }
 
 .u-section-5 .u-text-2 {
-  margin: auto auto 0;
+  margin: 30px auto 0;
 }
 
 .u-section-5 .u-text-3 {
   margin: 60px auto 0;
-  font-size: medium;
+  font-size: larger;
 }
 
 .u-section-5 .u-btn-1 {
@@ -727,6 +861,10 @@
 @media (max-width: 1199px) {
   .u-section-5 .u-sheet-1 {
     min-height: 348px;
+  }
+
+  .u-section-5 .u-text-2 {
+    margin: 20px auto 0;
   }
 
   .u-section-5 .u-text-3 {
@@ -752,6 +890,11 @@
     min-height: 232px;
   }
 
+  .u-section-5 .u-text-2 {
+    font-size: 1.5rem;
+    margin: 20px auto 0;
+  }
+
   .u-section-5 .u-text-3 {
     margin: 30px auto 0;
   }
@@ -773,9 +916,8 @@
     min-height: 100px;
   }
 
-  .u-section-5 .u-container-layout-2 {
-    padding-left: 30px;
-    padding-right: 30px;
+  .u-section-5 .u-btn-1 {
+    padding: 10px 75px;
   }
 }
 
@@ -784,8 +926,13 @@
     min-height: 522px;
   }
 
-  .u-section-5 .u-text-3 {
+  .u-section-5 .u-text-2 {
+    font-size: 1.5rem;
     margin: 0 auto 0;
+  }
+
+  .u-section-5 .u-text-3 {
+    margin: 60px auto 0;
   }
 
   .u-section-5 .u-layout-cell-1 {
@@ -801,9 +948,12 @@
     height: 305px;
   }
 
+  .u-section-5 .u-container-layout-1 {
+    padding: 10px 0;
+  }
+
   .u-section-5 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 10px 0;
   }
 }
 
@@ -813,7 +963,8 @@
   }
 
   .u-section-5 .u-text-3 {
-    font-size: small;
+    margin: 30px auto 0;
+    font-size: medium;
   }
 
   .u-section-5 .u-layout-cell-1 {
