--- a/functions/views/Home.ejs
+++ b/functions/views/Home.ejs
@@ -56,21 +56,21 @@
     </section>
     <section class="u-clearfix u-palette-1-dark-2 u-section-2" id="sec-0d88">
       <div class="u-clearfix u-sheet u-sheet-1">
+        <h1 class="u-text u-text-default u-text-palette-2-base u-text-1">About Us</h1>
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-container-align-center u-container-style u-layout-cell u-size-36 u-layout-cell-1">
+              <div class="u-container-align-center u-container-style u-layout-cell u-size-60 u-layout-cell-1">
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
                   <div class="u-container-align-center u-container-style u-expanded-width u-group u-palette-5-base u-radius-30 u-shape-round u-group-1">
                     <div class="u-container-layout u-valign-middle u-container-layout-2">
                       <h4 class="u-align-center u-text u-text-default u-text-2">
-                        未来の完全メタバース<br/>開発プロジェクト</h4>
-                      <p class="u-align-center u-text u-text-default u-text-3">日本中のテクノロジー好き学生が結集し<br/>「未来の完全メタバース」を研究開発する<br/>超本気プロジェクト！</p>
+                        ​日本中のテクノロジー好き学生が結集し<br/>「未来の完全メタバース」を研究開発する<br/>超本気プロジェクト！</h4>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="u-container-align-center u-container-style u-layout-cell u-size-24 u-layout-cell-2">
+              <div class="u-container-align-center u-container-style u-layout-cell u-size-60 u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-3">
                   <a href="https://nicepage.com/wysiwyg-html-editor" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-base u-radius-50 u-btn-1">詳しく</a>
                 </div>
@@ -80,9 +80,28 @@
         </div>
       </div>
     </section>
+    <section class="u-clearfix u-container-align-center u-palette-5-light-2 u-section-7">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-clearfix u-gutter-10 u-layout-wrap-1">
+          <div class="u-layout" style="">
+            <div class="u-layout-row" style="">
+              <div class="u-container-style u-layout-cell u-left-cell u-layout-cell-1" src="">
+                <div class="u-container-layout u-container-layout-1">
+                  <h3 class="u-align-center u-text u-text-3">ニコニコ超会議2023<br/>出展決定!!</h3>
+                  <a href="#" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-base u-radius-50 u-btn-1">ニコニコ超会議公式ページ</a>
+                </div>
+              </div>
+              <div class="u-align-center u-container-style u-image u-layout-cell u-right-cell u-image-1" src="" data-image-width="1440" data-image-height="1440">
+                <div class="u-container-layout u-valign-middle u-container-layout-2" src=""></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="u-clearfix u-container-align-center u-palette-5-base u-section-3" id="sec-5815">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h2 class="u-align-center u-text u-text-default u-text-palette-2-base u-text-1">開発プロジェクト</h2>
+        <h1 class="u-align-center u-text u-text-default-lg u-text-default-xl u-text-palette-2-base u-text-1">開発プロジェクト</h1>
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-container-align-center u-container-style u-list-item u-palette-4-base u-radius-50 u-repeater-item u-shape-round u-list-item-1">
@@ -165,7 +184,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     </section>
     <section class="u-clearfix u-palette-1-base u-section-5" id="sec-a6e2">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-align-center u-text u-text-default u-text-1">AI Art Gallery</h1>
+        <h4 class="u-align-center u-text u-text-default u-text-palette-2-base u-text-3">ええあいいちば</h4>
+        <h1 class="u-align-center u-text u-text-default u-text-palette-2-base u-text-1">絵え愛市場</h1>
         <div class="u-clearfix u-expanded-width u-gutter-10 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout" style="">
             <div class="u-layout-row" style="">
@@ -176,9 +196,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-right-cell u-shape-rectangle u-size-30 u-size-xs-60 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-2">
-                  <h4 class="u-align-center u-text u-text-default u-text-3">​ええあいいちば</h4>
-                  <h2 class="u-align-center u-text u-text-default u-text-2">絵え愛市場
-                  </h2>
+                  <h3 class="u-align-center u-text u-text-default u-text-2">日本初となる<br/>メタバース空間上でのAIアート<br/>販売展示会
+                  </h3>
                   <a href="" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-base u-radius-50 u-btn-1">展示会へ</a>
                 </div>
               </div>
@@ -204,7 +223,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
               </div>
               <div class="u-container-align-center u-container-style u-layout-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-2">
-                  <h3 class="u-align-center u-text u-text-default u-text-5">企業・法人・個人の方</h3>
+                  <h3 class="u-align-center u-text u-text-default u-text-5">ご協賛について</h3>
                   <h4 class="u-align-center u-text u-text-default u-text-6">学檄INFINITE製作委員会に協力したい</h4>
                   <a href="https://nicepage.com/k/test-website-templates" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-base u-radius-50 u-btn-2">こちらから</a>
                 </div>
