--- a/functions/views/index.ejs
+++ b/functions/views/index.ejs
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <title>Home</title>
     <link rel="stylesheet" href="/gakugeki-25a64/us-central1/app/stylesheets/nicepage.css" media="screen">
+    <link rel="stylesheet" href="/gakugeki-25a64/us-central1/app/stylesheets/member.css" media="screen">
 <link rel="stylesheet" href="/gakugeki-25a64/us-central1/app/stylesheets/Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="/gakugeki-25a64/us-central1/app/javascripts/jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="/gakugeki-25a64/us-central1/app/javascripts/nicepage.js" defer=""></script>
@@ -129,59 +130,7 @@
         </div>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-section-4" id="sec-5cbb">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-text u-text-default-lg u-text-default-xl u-text-palette-2-base u-text-1">メンバー</h1>
-        <h4 class="u-text u-text-default u-text-2">全国から集まったメンバーたちと日々活動しています<span style="font-style: normal;"></span>
-        </h4>
-        <div class="u-expanded-width u-layout-horizontal u-list u-list-1">
-          <div class="u-repeater u-repeater-1">
-            <div class="u-align-center u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-1">
-                <div alt="" class="u-image u-image-circle u-image-1" data-image-width="1280" data-image-height="774"></div>
-                <h4 class="u-align-center u-text u-text-default u-text-3">Jeffrey Brown</h4>
-              </div>
-            </div>
-            <div class="u-align-center u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-2">
-                <div alt="" class="u-image u-image-circle u-image-2" data-image-width="1280" data-image-height="774"></div>
-                <h4 class="u-align-center u-text u-text-default u-text-4">Ann Richmond</h4>
-              </div>
-            </div>
-            <div class="u-align-center u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-3">
-                <div alt="" class="u-image u-image-circle u-image-3" data-image-width="1280" data-image-height="774"></div>
-                <h4 class="u-align-center u-text u-text-default u-text-5">Alex Greenfield</h4>
-              </div>
-            </div>
-          </div>
-          <a class="u-absolute-vcenter u-gallery-nav u-gallery-nav-prev u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-gallery-nav-1" href="#" role="button">
-            <span aria-hidden="true">
-              <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
-c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
-c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
-            </span>
-            <span class="sr-only">
-              <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
-c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
-c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
-            </span>
-          </a>
-          <a class="u-absolute-vcenter u-gallery-nav u-gallery-nav-next u-grey-70 u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-gallery-nav-2" href="#" role="button">
-            <span aria-hidden="true">
-              <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
-L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
-c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
-            </span>
-            <span class="sr-only">
-              <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
-L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
-c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
-            </span>
-          </a>
-        </div>
-      </div>
-    </section>
+    <%- include("member.ejs") %>
     <section class="u-clearfix u-palette-1-base u-section-5" id="sec-a6e2">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h4 class="u-align-center u-text u-text-default u-text-palette-2-base u-text-3">ええあいいちば</h4>
@@ -191,7 +140,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             <div class="u-layout-row" style="">
               <div class="u-align-center u-container-style u-layout-cell u-left-cell u-size-30 u-size-xs-60 u-layout-cell-1" src="">
                 <div class="u-container-layout u-valign-top u-container-layout-1" src="">
-                  <img class="u-expanded-width u-image u-image-round u-radius-50 u-image-1" src="images/AI-art.jpeg" data-image-width="2071" data-image-height="772">
+                  <img class="u-expanded-width u-image u-image-round u-radius-50 u-image-1" src="/gakugeki-25a64/us-central1/app/images/AI-art.jpeg" data-image-width="2071" data-image-height="772">
                 </div>
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-right-cell u-shape-rectangle u-size-30 u-size-xs-60 u-layout-cell-2">
