--- a/functions/views/header.ejs
+++ b/functions/views/header.ejs
@@ -14,9 +14,9 @@
         <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/gakugeki-25a64/us-central1/app/Home" style="padding: 10px 20px;">
             <img src="/gakugeki-25a64/us-central1/app/images/home.svg" height="20px" width="20px" style="vertical-align:middle;"><p style="vertical-align:middle;display:inline;"> Home</p></a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/gakugeki-25a64/us-central1/app/About" style="padding: 10px 20px;">
-    <img src="/gakugeki-25a64/us-central1/app/images/about_us.svg" height="20px" width="20px" style="vertical-align:middle;"><p style="vertical-align:middle;display:inline;"> About</p></a>
+    <img src="/gakugeki-25a64/us-central1/app/images/about_us.svg" height="20px" width="20px" style="vertical-align:middle;"><p style="vertical-align:middle;display:inline;"> About us</p></a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/gakugeki-25a64/us-central1/app/Arts" style="padding: 10px 20px;">
-    <img src="/gakugeki-25a64/us-central1/app/images/AI_art.svg" height="16px" width="16px" style="vertical-align:middle;"><p style="vertical-align:middle;display:inline;"> Arts</p></a>
+    <img src="/gakugeki-25a64/us-central1/app/images/AI_art.svg" height="16px" width="16px" style="vertical-align:middle;"><p style="vertical-align:middle;display:inline;"> Art</p></a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/gakugeki-25a64/us-central1/app/Home#sec-5815" style="padding: 10px 20px;">
     <img src="/gakugeki-25a64/us-central1/app/images/projects.svg" height="16px" width="16px" style="vertical-align:middle;"><p style="vertical-align:middle;display:inline;"> Projects</p></a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/gakugeki-25a64/us-central1/app/Home#sec-5cbb" style="padding: 10px 20px;">
