--- a/functions/views/About.ejs
+++ b/functions/views/About.ejs
@@ -44,7 +44,7 @@
     </section>
     <section class="u-align-center u-clearfix u-palette-5-base u-section-3" id="sec-d019">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-text u-text-default u-text-palette-2-base u-text-1">About Us</h1>
+        <h1 class="u-text u-text-default u-text-palette-2-base u-text-1">About us</h1>
         <h4 class="u-text u-text-2">『学檄INFINITE!!製作委員会』は、<br class="block-767"/>2022年6月に発足した学生団体である。<br/>立ち上げ初期は開発好きな大学生数人の<br class="block-767"/>小さなコミュニティだったが、<br/>2023年3月現在では学生の数は20人を超え、<br/>メタバース開発・Web開発・<br class="block-767"/>未来のエンタメ製作など<br/>多岐にわたる活動を行っている。<br/>昨年12月には、学問と遊びの融合をテーマに<br class="block-767"/>『V檄祭』を主催。<br/>仮想空間でのイベントとしては異例の<br class="block-767"/>90名を超える動員を達成し、<br/>現在、「未来のメタバースの開発」に向け、<br class="block-767"/>鋭意、取り組んでいる。
         </h4>
       </div>
