--- a/functions/views/Home.ejs
+++ b/functions/views/Home.ejs
@@ -140,7 +140,7 @@
             <div class="u-layout-row" style="">
               <div class="u-align-center u-container-style u-layout-cell u-left-cell u-size-30 u-size-xs-60 u-layout-cell-1" src="">
                 <div class="u-container-layout u-valign-top u-container-layout-1" src="">
-                  <img class="u-expanded-width u-image u-image-round u-radius-50 u-image-1" src="/gakugeki-25a64/us-central1/app/images/AI-art.jpeg" data-image-width="2071" data-image-height="772">
+                  <img class="u-expanded-width u-image u-image-round u-radius-50 u-image-1" src="/gakugeki-25a64/us-central1/app/images/絵え愛市場.jpeg" data-image-width="2071" data-image-height="772">
                 </div>
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-right-cell u-shape-rectangle u-size-30 u-size-xs-60 u-layout-cell-2">
