AI art design and member design

--- a/functions/views/member.ejs
+++ b/functions/views/member.ejs
@@ -1,4 +1,4 @@
-<section class="u-align-center u-clearfix u-section-4" id="sec-5cbb">
+<section class="u-align-center u-clearfix u-section-member" id="sec-5cbb">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <h1 class="u-text u-text-default-lg u-text-default-xl u-text-palette-2-base u-text-1">メンバー</h1>
       <h4 class="u-text u-text-default u-text-2">全国から集まったメンバーたちと日々活動しています<span style="font-style: normal;"></span>
@@ -8,19 +8,41 @@
           <div class="u-align-center u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-1">
               <div alt="" class="u-image u-image-circle u-image-1" data-image-width="1280" data-image-height="774"></div>
-              <h4 class="u-align-center u-text u-text-default u-text-3">Jeffrey Brown</h4>
-            </div>
-          </div>
-          <div class="u-align-center u-container-style u-list-item u-repeater-item">
-            <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-2">
-              <div alt="" class="u-image u-image-circle u-image-2" data-image-width="1280" data-image-height="774"></div>
-              <h4 class="u-align-center u-text u-text-default u-text-4">Ann Richmond</h4>
+              <h4 class="u-align-center u-text u-text-default u-text-3">委員長</h4>
+              <h4 class="u-align-center u-text u-text-default u-text-4">法政大学３年</h4>
+              <h4 class="u-align-center u-text u-text-default u-text-4">高添太亮</h4>
             </div>
           </div>
           <div class="u-align-center u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-3">
               <div alt="" class="u-image u-image-circle u-image-3" data-image-width="1280" data-image-height="774"></div>
-              <h4 class="u-align-center u-text u-text-default u-text-5">Alex Greenfield</h4>
+              <h4 class="u-align-center u-text u-text-default u-text-3">広報部長</h4>
+              <h4 class="u-align-center u-text u-text-default u-text-4">防衛大学校４年</h4>
+              <h4 class="u-align-center u-text u-text-default u-text-4">寺田龍史</h4>
+            </div>
+          </div>
+          <div class="u-align-center u-container-style u-list-item u-repeater-item">
+            <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-2">
+              <div alt="" class="u-image u-image-circle u-image-2" data-image-width="1280" data-image-height="774"></div>
+              <h4 class="u-align-center u-text u-text-default u-text-3">メタバース開発部長</h4>
+              <h4 class="u-align-center u-text u-text-default u-text-4">東京大学３年</h4>
+              <h4 class="u-align-center u-text u-text-default u-text-4">伊藤黎</h4>
+            </div>
+          </div>
+          <div class="u-align-center u-container-style u-list-item u-repeater-item">
+            <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-3">
+              <div alt="" class="u-image u-image-circle u-image-3" data-image-width="1280" data-image-height="774"></div>
+              <h4 class="u-align-center u-text u-text-default u-text-3">ウェブ開発部長</h4>
+              <h4 class="u-align-center u-text u-text-default u-text-4">東京大学２年</h4>
+              <h4 class="u-align-center u-text u-text-default u-text-4">山本裕貴</h4>
+            </div>
+          </div>
+          <div class="u-align-center u-container-style u-list-item u-repeater-item">
+            <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-3">
+              <div alt="" class="u-image u-image-circle u-image-3" data-image-width="1280" data-image-height="774"></div>
+              <h4 class="u-align-center u-text u-text-default u-text-3">映像制作部長</h4>
+              <h4 class="u-align-center u-text u-text-default u-text-4">東京大学２年</h4>
+              <h4 class="u-align-center u-text u-text-default u-text-4">坂口来輝</h4>
             </div>
           </div>
         </div>
