--- a/functions/public/stylesheets/arts.css
+++ b/functions/public/stylesheets/arts.css
@@ -241,6 +241,7 @@
 
 .u-section-2 .u-gallery-item {
   height: 300px;
+  width: 300px;
   margin-right: 0;
 }
 
@@ -260,6 +261,17 @@
   padding: 10px 82px 10px 80px;
 }
 
+.u-section-2 .u-btn-2 {
+  top:50%;
+  transform: translateY(-50%);
+}
+
+.u-section-2 .u-gallery-item-1 {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 @media (max-width: 1199px) {
 
   .u-section-2 .u-gallery-1 {
@@ -269,6 +281,12 @@
 
   .u-section-2 .u-gallery-inner-1 {
     grid-template-columns: repeat(3, auto);
+  }
+
+  .u-section-2 .u-gallery-item {
+    height: 280px;
+    width: 280px;
+    margin-right: 0;
   }
 }
 
@@ -282,6 +300,12 @@
   .u-section-2 .u-gallery-inner-1 {
     grid-template-columns: repeat(2, auto);
   }
+
+  .u-section-2 .u-gallery-item {
+    height: 300px;
+    width: 300px;
+    margin-right: 0;
+  }
 }
 
 @media (max-width: 767px) {
@@ -293,11 +317,6 @@
 
   .u-section-2 .u-gallery-inner-1 {
     grid-template-columns: repeat(1, auto);
-  }
-
-  .u-section-2 .u-gallery-item {
-    width:300px;
-    margin:auto
   }
 }
 
