--- a/functions/views/Arts.ejs
+++ b/functions/views/Arts.ejs
@@ -83,7 +83,7 @@
     <section class="u-align-center u-clearfix u-palette-1-base u-section-2" id="sec-d607">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-default u-text-1">作品を見る</h2>
-        <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-show-text-on-hover u-gallery-1" id="carousel-c3c7">
+        <div class="u-gallery u-layout-grid u-lightbox u-show-text-on-hover u-gallery-1" id="carousel-c3c7">
           <div class="u-gallery-inner u-gallery-inner-1" role="listbox" id="Arts__contents__item">
           </div>
         </div>
